# Comboios

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/comboios/: client.py  config.py  exceptions.py  models.py
src/comboios/endpoints/: journeys.py  stations.py  trains.py
src/comboios_cli/: main.py
tests/: test_client.py  test_config.py  test_endpoints.py  test_integration.py
